--- a/index.html
+++ b/index.html
@@ -7,10 +7,31 @@
 <link rel="stylesheet" href="index.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+<link rel="shortcut icon" href="https://icon-library.com/images/free-movies-icon/free-movies-icon-16.jpg" type="image/x-icon">
     <title>T2links Movies</title>
   </head>
   <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand">T2links</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" target="_blank" href="https://telegram.me/t2linkspromotion_bot">Request Movie</a>
+            </li>
+
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+
+
     <!-- Alert -->
     <div id="alert" style="display: none;" class="alert alert-danger fade show" role="alert">
       <span id="alert-text">A simple danger alert—check it out!</span>
